# 3-python-package-loaded-package

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: python-package.yml
CommitMessageGenerator/: pyproject.toml
CommitMessageGenerator/commit_message_generator/: drama.py  generator.py
CommitMessageGenerator/tests/: test_drama.py  test_emoji.py  test_generator.py
commit_message_generator/: __init__.py  emoji.py
commitmessage/: __init__.py  drama.py  haiku.py  style.py
src/commitmessage/: __init__.py
tests/: test_drama.py  test_emoji.py  test_haiku.py  test_style.py
